--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -33,10 +33,12 @@
         </div>
     </nav>
 
-    <section id="sekcja1" class="container-fluid py-5 bg-secondary">
+    <section id="sekcja2" class="container-fluid py-5 bg-secondary">
         <div class="container text-center">
             <h1 class="mt-5">Alert</h1>
-            To jest alert Bootstrap!
+            <div class="alert alert-warning" role="alert">
+                To jest alert Bootstrap!
+            </div>
         </div>
     </section>
     
